--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.7.3",
     "cssnano": "^5.1.10",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
@@ -26,6 +27,13 @@
     "gulp-terser-js": "^5.2.2",
     "gulp-webp": "^4.0.1",
     "sass": "^1.41.1",
+    "style-loader": "^3.3.1",
     "terser": "^5.14.2"
+  },
+  "dependencies": {
+    "aos": "^2.3.4",
+    "sweetalert2": "^11.6.16",
+    "swiper": "^8.4.5",
+    "webpack-stream": "^7.0.0"
   }
 }
